--- a/src/pages/Arena.css
+++ b/src/pages/Arena.css
@@ -1,30 +1,31 @@
-.arena{
-     padding: 35px;
-     height: 100%;
-     position: relative;
-     border: 1px solid #000;
-     border-image: url('../assets/images/border3.png') 30 / 8px round;
+.arena {
+  padding: 35px;
+  height: 100%;
+  min-height: 90vh;
+  position: relative;
+  border: 1px solid #000;
+  border-image: url("../assets/images/border3.png") 30 / 8px round;
 }
 
-.arena h1{
-     margin-bottom: 10px;
+.arena h1 {
+  margin-bottom: 10px;
 }
 
-.arena__content{
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: center;
+.arena__content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-@media only screen and (max-width: 600px){
-	.arena{
-          height: auto;
-          padding: 15px;
-          padding-top: 55px;
-          border: none;
-          border-radius: 0;
-     }
-     .arena h1{
-          display: none;
-     }
+@media only screen and (max-width: 600px) {
+  .arena {
+    height: auto;
+    padding: 15px;
+    padding-top: 55px;
+    border: none;
+    border-radius: 0;
+  }
+  .arena h1 {
+    display: none;
+  }
 }
