--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -1,53 +1,54 @@
-.register{
-     border-radius: 8px;
-     padding: 35px;
-     height: 100%;
-     position: relative;
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     padding-top: 15%;
-     position: relative;
-     border: 1px solid #000;
-     border-image: url('../assets/images/border3.png') 30 / 8px round;
+.register {
+  border-radius: 8px;
+  padding: 35px;
+  height: 100%;
+  min-height: 90vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 15%;
+  position: relative;
+  border: 1px solid #000;
+  border-image: url("../assets/images/border3.png") 30 / 8px round;
 }
 
-.register h1{
-     margin-bottom: 20px;
+.register h1 {
+  margin-bottom: 20px;
 }
 
-.register__form{
-     width: 220px;
-     display: flex;
-     flex-direction: column;
+.register__form {
+  width: 220px;
+  display: flex;
+  flex-direction: column;
 }
-.register__form h2{
-     margin-bottom: 8px;
+.register__form h2 {
+  margin-bottom: 8px;
 }
-.register__form input{
-     margin-bottom: 10px;
-     padding: 8px;
-     padding-left: 20px;
-     border: none;
-     border-radius: 8px;
-     font-family: var(--main-font);
+.register__form input {
+  margin-bottom: 10px;
+  padding: 8px;
+  padding-left: 20px;
+  border: none;
+  border-radius: 8px;
+  font-family: var(--main-font);
 }
-.register__form input:focus{
-     outline: 0;
-     box-shadow: 0 0 0 3px var(--primary);
+.register__form input:focus {
+  outline: 0;
+  box-shadow: 0 0 0 3px var(--primary);
 }
-.register__form button{
-     margin: 0;
-}
-
-.register form a{
-     color: var(--primary);
-     margin-top: 10px;
+.register__form button {
+  margin: 0;
 }
 
-@media only screen and (max-width: 600px){
-	.register{
-          border: none;
-          border-radius: 0;
-     }
+.register form a {
+  color: var(--primary);
+  margin-top: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .register {
+    border: none;
+    border-radius: 0;
+  }
 }
